objects/Placement_Information__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Email__c</fullName>
        <description>New creation</description>
        <inlineHelpText>dear user, please enter email here.</inlineHelpText>
        <label>Candidate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <inlineHelpText>Dear user, please enter last name here (ex:John).</inlineHelpText>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Placement Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>